--- a/ModulPanel/appsettings.json
+++ b/ModulPanel/appsettings.json
@@ -1,9 +1,16 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Port=3306;Database=modulpanel;User=root;Password=#EK?c*1711.;AllowPublicKeyRetrieval=True;AllowUserVariables=True;SslMode=None;"
+    "DefaultConnection": "Server=172.25.0.10;Database=modulpanel;User=envanteruser;Password=Envanter123!;SslMode=None;AllowPublicKeyRetrieval=True"
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://0.0.0.0:5081"
+      }
+    }
   },
   "Jwt": {
-    "Key": "MySuperUltraStrongJwtSecretKey_1234567890!@#$$%",
+    "Key": "MySuperUltraStrongJwtSecretKey_1234567890!@!$$$",
     "Issuer": "ModulPanelAPI",
     "Audience": "ModulPanelClient",
     "ExpireHours": 2
